--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -111,7 +111,11 @@ main {
     border-color: rgba(244, 122, 0);
 }
 
-.body-page-container-bttn button {
+.body-page-container-bttn a {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: var(--orange-color);
     color: white;
     font-weight: bold;
